# amateur-engineering

./: .gitignore  README.md  app.bak.py  app.py  bookmarks.yaml  contributors.json  contributors.yaml  feeds.json  get_git.py  get_gitlab.py  members.yaml  refresh.py  requirements.txt  todo.py
ae-scraper/: aggregated_posts.json  (+6 more)
amateurengineering.com/: .gitignore  README.md  ae-rss.html  get_posts.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  rss_scraper.py  sample-post.md
amateurengineering.com/content/AmateurEngineering.com/: 2025-01-01 What is Amateur Engineering.md
amateurengineering.com/content/ObsoleteNerd.com/: Solving the Australian Signals Directorate Cryptography Challenge Coin.md
amateurengineering.com/content/css/: nano.css  style.css
amateurengineering.com/content/dmoges.com/: bsides-2026-ctf-01-find-the-company.md  bsides-2026-ctf-02-website-access.md  bsides-2026-ctf-03-webmail-access.md  bsides-2026-ctf-04-irc-access.md  bsides-2026-ctf-05-self-destruct.md  bsides-2026-ctf-overview.md  bsides-ctf-barcode-basics.md  bsides-ctf-gold-rush-portal-multi-stage.md  bsides-ctf-gold-rush-security-sql-injection.md  bsides-ctf-hidden-bio-osint.md  bsides-ctf-stegosaurus-steganography.md  hello-world.md  langchain-custom-agent-brain-meetup.md  sao-bsides-ballarat-2026.md  tennis-first-set-analysis.md
amateurengineering.com/content/images/: style.css
amateurengineering.com/output/: archives.html  authors.html  categories.html  index.html  tags.html  what-is-amateur-engineering.html
amateurengineering.com/themes/: README.md
(+32 files in other folders)
