[project]
name = "amateurengineering-com"
version = "0.1.0"
description = "AmateurEngineering.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pelican[markdown]>=4.11.0",
    "feedparser>=6.0.11",
    "requests>=2.32.5",
]

[project.optional-dependencies]
markdown = [
    "pelican>=4.11.0",
]
